# arabic-morphology-avl-hash

./: .gitignore  Makefile  README.md
diagrams/: 01_architecture.md  02_avl_tree.md  03_hash_table.md  04_scheme_internal.md  05_generation_process.md  06_validation.md  07_root_node_list.md  08_cli_flow.md
docs/: 00_DEVELOPMENT_PLAN.md  01_project_structure.md  02_utf8_handling.md
include/: AVLNode.h  AVLTree.h  HashTable.h  SchemeEntry.h  UnicodeHelper.h
src/: AVLTree.cpp  HashTable.cpp  UnicodeHelper.cpp  main.cpp
task/: wtd.md
tests/: CMakeLists.txt  test_avl.cpp  test_hashtable.cpp  test_main.cpp
